// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<TouchableOpacity
  style={
    [
      undefined,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "height": 40,
      },
      {
        "borderRadius": 9999,
      },
      undefined,
      undefined,
    ]
  }
>
  <PeachText
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#F56522",
        },
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "minWidth": 96,
          "paddingLeft": 8,
          "paddingRight": 8,
          "textAlign": "center",
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Text
  </PeachText>
</TouchableOpacity>
`;

exports[`Button should render correctly for medium viewports 1`] = `
<TouchableOpacity
  style={
    [
      undefined,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "height": 40,
      },
      {
        "borderRadius": 9999,
      },
      undefined,
      undefined,
    ]
  }
>
  <PeachText
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#F56522",
        },
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "minWidth": 96,
          "paddingLeft": 8,
          "paddingRight": 8,
          "textAlign": "center",
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Text
  </PeachText>
</TouchableOpacity>
`;

exports[`Button should render correctly while loading 1`] = `
<TouchableOpacity
  style={
    [
      undefined,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "height": 40,
      },
      {
        "borderRadius": 9999,
      },
      undefined,
      undefined,
    ]
  }
>
  <PeachText
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#F56522",
        },
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "minWidth": 96,
          "paddingLeft": 8,
          "paddingRight": 8,
          "textAlign": "center",
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Text
  </PeachText>
  <Loading
    color="#F56522"
    style={
      {
        "height": 20,
        "width": 20,
      }
    }
  />
</TouchableOpacity>
`;

exports[`Button should render correctly with icon 1`] = `
<TouchableOpacity
  style={
    [
      undefined,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      {
        "height": 40,
      },
      {
        "borderRadius": 9999,
      },
      undefined,
      undefined,
    ]
  }
>
  <PeachText
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#F56522",
        },
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 14,
          "letterSpacing": 0.5,
          "lineHeight": 24,
          "minWidth": 96,
          "paddingLeft": 8,
          "paddingRight": 8,
          "textAlign": "center",
          "textTransform": "uppercase",
        },
      ]
    }
  >
    Text
  </PeachText>
  <Icon
    color="#F56522"
    id="alertCircle"
    style={
      {
        "height": 16,
        "width": 16,
      }
    }
  />
</TouchableOpacity>
`;
